--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "node": "20.x"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "npx vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+  "dev": "vite",
+  "build": "NODE_ENV=production vite build",
+  "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+  "preview": "vite preview"
 }
+
 ,
   "dependencies": {
     "emailjs-com": "^3.2.0",
