--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "engines": {
     "node": "20.x"
   },
-  "scripts": {
+"scripts": {
     "dev": "vite",
-    "build": "npx vite build",
+    "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-  },
+},
 
   "dependencies": {
     "emailjs-com": "^3.2.0",
